--- a/src/app/templates/shared/modal/modal.component.scss
+++ b/src/app/templates/shared/modal/modal.component.scss
@@ -1,4 +1,6 @@
-﻿body.modal-open {
+﻿@import "~theme/_z-index.scss";
+
+body.modal-open {
   overflow: hidden;
 }
 
@@ -12,7 +14,7 @@ modal {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 9912;
+  z-index: map-get($z-index, modal);
   overflow: auto;
 }
 
@@ -24,7 +26,7 @@ modal {
   left: 0;
   background-color: #000;
   opacity: 0.75;
-  z-index: 9911;
+  z-index: map-get($z-index, modal-overlay);
 }
 
 .modal-body {
