--- a/src/app/templates/shell/header/header.component.scss
+++ b/src/app/templates/shell/header/header.component.scss
@@ -8,7 +8,6 @@ header {
   position: sticky;
   width: 100%;
   top: -1px;
-  z-index: 9900;
 }
 
 header .grid {
@@ -88,7 +87,6 @@ nav {
   position: -webkit-sticky;
   width: 100%;
   top: 50px;
-  z-index: 9909;
 }
 
 .infoBanner {
